# SDR-SpectrumMonitoring-Sensor

./: .env  .gitignore  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  Doxyfile  LTE-GPS-Mux-ANE2-code.rar  OPTIMIZATION_ROADMAP.md  README.md  build.sh  build_docs.sh  campaign_logic.py  campaign_runner.py  campaign_to_json.py  cfg.py  deactivate_service.sh  document.sh  dummy_campaign.py  ex_campaign.py  ex_status_post.py  firmware.txt  functions.py  generate_gps_json.py  generate_status_json.py  init_sys.py  install-local.sh  install.sh  install.sh.old  kal_sync.py  kal_sync_legal_FM.py  kal_sync_pilot_tone.py  libs_DSP.py  ltegps_app  mock_crontab.txt  new_orchestrator.py  ntp_sync.py  orchestrator.py  package-lock.json  package.json  persistent.json  (+13 more)
.github/: codex-issue-19may26.md  copilot-instructions.md  issues-campaign-19may26.md
Historic/: 1765814829960.json  1779272122872.json  1779272163452.json  1779273483256.json
LTE-GPS/: .env  CMakeLists.txt  build.sh  cfg.py  dependencies.md  functions.c  gps_lte_app  install-gpiodv2.md  install.sh  main  main.c  requirements.txt  rf_app  server.py
LTE-GPS/Drivers/: bacn_GPS.c  bacn_GPS.h  bacn_LTE.c  bacn_gpio.h  ring_buffer.c  sdr_HAL.h
LTE-GPS/Modules/: fm_logic.h  utils.c  utils.h
LTE-GPS/daemons/: client-psd-gps.service  install-deamons.md  lte-gps-client.service  rf-client.service
LTE-GPS/document/: instructivo-monitoreo-espectral-realtime.tex
LTE-GPS/examples/: save_3december.c
LTE-GPS/gps-lte/: gps-lte.c
LTE-GPS/gps-lte/libs/: bacn_GPS.c  bacn_LTE.h
LTE-GPS/json/: GET-init.jsonc  POST-data.jsonc  POST-gps.jsonc  POST-status.jsonc
LTE-GPS/json/in/: antenna_zmq.jsonc  data_psd.jsonc  realtime_live.jsonc
LTE-GPS/rf/: rf.c
LTE-GPS/rf/libs/: psd.h  ring_buffer.h  sdr_HAL.c
LTE-GPS/utils/: welch_util.py
Logs/kal/: last_scan.csv
app/: acquire_runner.py  antenna_dummy.py  campaign_runner.py  cfg.py  demod.py  demod_consumer.py  init_system.py  kal_sync.py  ntp_sync.py  orchestrator.py  psd_consumer.py  realtime_dummy.py  realtime_processor.py  realtime_runner.py  retry_queue.py  scheduler.py  status_device.py  test.py
app/libs/: __init__.py  lte_handler.py
app/utils/: __init__.py  io_util.py  request_util.py  sdr_util.py  welch_util.py
audiofm/: index.html  test.js  test.py
automatizacion/: auto.py  cfg.py  client.py  requirements.txt
automatizacion/utils/: __init__.py  welch_util.py
backups/: firmware-14may26-12:35.txt
cmd/: build-all.sh  build.sh
common/: bacn_gpio.c  bacn_gpio.h
context/: AI_RULES.md  OPTIMIZATION_ROADMAP.md
daemons/: README.md  init-sys-ane2.service  install-deamons.md  ltegps-ane2.service  orchestrator-ane2.service  orchestrator-realtime.service  orchestrator.service  retry-queue-ane2.service  retry-queue-ane2.timer  rf-ane2.service  rf-client.service  status-ane2.service  status-ane2.timer
docs/: Makefile  c_modules.rst  conf.py  index.rst  python_modules.rst  requirements.txt
document/DC_spike_remove/: dc_remove.tex
examples/: BPFTRACE_USAGE.md  acquire_jsons.py  benchmark_rf_example.py  bpftrace-execute_pfb_psd.py  campaign_logic.py  dual_acquisition.py  dummy_campaign.py  ex_campaign.py  ex_persistent.py  ex_posts.py  ex_realtime.py  generate_data_json.py  pfb.py  realtime_logic.py  signaling_relay.py  spike_testing.py
generate_jsons/: generate_data_json.py
gps-lte/: gps-lte.c
gps-lte/libs/: bacn_GPS.c  bacn_GPS.h  bacn_LTE.c  bacn_LTE.h  utils.c  utils.h
json/: DATA-POST.jsonc  DEFAULTS.jsonc  GET-campaigns.jsonc  GET-init.jsonc  GET-jobs.jsonc  GET-realtime.jsonc  POST-data.jsonc  POST-gps.jsonc  POST-status.jsonc  STATUS-POST.jsonc  persistent.json  shmstore.jsonc  tmp-camp.json
json/GET-jobs/: JOBS-GET.jsonc  example1.jsonc  example2.jsonc  example3.jsonc  example4.jsonc
json_spikes/: rbw_100000_acq_1.json  rbw_100000_acq_3.json  rbw_100000_acq_5.json  rbw_100000_acq_7.json  rbw_100000_acq_9.json  rbw_10000_acq_1.json  rbw_10000_acq_5.json  rbw_10000_acq_7.json  rbw_50000_acq_1.json  rbw_50000_acq_3.json  rbw_50000_acq_5.json  rbw_50000_acq_9.json  rbw_5000_acq_1.json  rbw_5000_acq_3.json  rbw_5000_acq_5.json  rbw_5000_acq_7.json  rbw_5000_acq_9.json
libs_C/: CMakeLists.txt  lte_driver.c  main.c
libs_C/Drivers/: utils.c  (+8 more)
notes/: DC-spike-removal-v1.txt  deltas.md  dependencies.md  get_mac.txt  installation_kalibrate-hackrf.md  notes.excalidraw  ring_buffer.excalidraw  yeissonn-entregable.md
old-app/: campaign_runner.py  cfg.py  demod_consumer.py  init_system.py  kal_sync.py  orchestrator.py  realtime_runner.py  server.py  status_device.py
report/: methodological_support_report.tex
results/: 20260409_162756_HW_manual.csv  idle.csv
rf/: current_rf.c  rf.c  rf_audio.c
server_danl/: DANL.py  server_pc.py
test/: bpftrace-execute_pfb_psd.py  conftest.py  extract-csvs-nodes.py  hackrf-max-5min.py  idle-5mins.py  manual_cli_hw_db.py  test_benchmarking.py  test_io_util.py  test_lte_handler.py  test_request_util.py  tester.py
test-LTE-GPS/: CMakeLists.txt  build.sh  cfg.py  main.c  metrics_server.py  requirements.txt
test-LTE-GPS/Drivers/: bacn_gpio.h  zmqpub.c  zmqsub.c  zmqsub.h
test-LTE-GPS/common/: bacn_gpio.c  bacn_gpio.h
test-LTE-GPS/json/: GET-realtime.jsonc  POST-data.jsonc  POST-gps.jsonc
test-LTE-GPS/rf/: build.sh  rf_metrics.c
test-LTE-GPS/rf/libs/: datatypes.h  psd.c  zmqpub.h
test-LTE-GPS/utils/: io_util.py
tests_polyfilter/: acquire_hack.py
tests_spike_filter_poly/: spike_testing.py  test2.py
tmp/: vars.json
tools/: FM_sync.ipynb  FM_sync.py  UI.py  analyze-optimization.ipynb  ane_ids_frecuencia_fm_dist_km_ordenados.csv  capture_10_psd_avg.py  kal_sync_legal_FM.py  kal_sync_pilot_tone.py  optimizer-FM_sync.py  optimizer-ppm.ipynb  pilot-tone-test.ipynb  plot_sftp_jsons.py  psd_live_ui.py  sftp-downloader.py  sftp-uploader.py  single_capture.py  test_kalibrate_payload.py  uhd-test.py
utils/: __init__.py  benchmarking.py  dc_spike_detection.py  dc_spike_removal.py  io_util.py  request_util.py  spectral_content_analysis.py  status_util.py
utils-C-ANE2/: fm_logic.c  system_stats.c  system_stats.h
(+43 files in other folders)
